<resources>
    <string name="app_name">Smack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="generate_background_color">GENERATE BACKGROUND COLOR</string>
    <string name="create_user">CREATE USER</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="email">email</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="user_avatar_image">User Avatar Image</string>
    <string name="login">LOGIN</string>
    <string name="sign_up_here">SIGN UP HERE</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="add_channel">Add Channel</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
    <string name="please_log_in">Please Log In</string>
    <string name="send_message_button">Send Message Button</string>
    <string name="add_channel_button">Add Channel Button</string>
    <string name="user_image">User Image</string>
    <string name="logout">LOGOUT</string>
</resources>
